# news-radar-rss

./: .dockerignore  .env.example  .env.homolog.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  api_server.py  dashboard.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  n8n-workflow.json  n8n_workflow_code.js  pyproject.toml  requirements-dev.txt  requirements.txt  start.ps1  tasks.md
.claude/: docker_restart_hook.py
config/: portal_sources_seed.yaml
configs/: feeds.yaml
dashboard/: app.py  components.py
docs/: DEPLOYMENT.md  N8N_WORKFLOWS.md  OPERACAO_EDITORIAL.md  OPERATIONS.md  checklist-e2e.md  manual-validation-phase-1.md  project-audit.md  sdd-review.md  target-architecture.md
pages/: 0_Edicoes.py  11_Auditoria.py  12_Scraping.py  1_Operacao.py  2_Lotes_IA.py  3_Ranking.py  4_Clusters.py  5_Editorial.py  6_Entidades.py  7_Alertas.py  8_Fontes_RSS.py
prompts/: 01-bootstrap-existing-project.md  02-decouple-n8n.md  03-dashboard-cockpit.md  04-ai-assisted-processing.md  05-card-template-renderer.md  06-review-agent.md  07-refactor-without-behavior-change.md  ai_batch_prompt_template.txt
scripts/: activate_workflow.py  add_dispatch_schedules.py  archive_old_workflows.py  check_workflow.py  create_n8n_credential.py  list_workflows.py  migrate_dispatches.py  migrate_editorial_status.py  n8n_helper.py  notion_doc_update.py  patch_n8n_timeout.py  patch_workflow_creds.py  patch_workflow_resilience.py  rebuild_workflow_codernodes.py  rebuild_workflow_server.py  seed_portal_sources.py  seed_sources.py  telegram_poller.py
searxng/: settings.yml
skills/: ai-prompt-import-patterns.md  card-rendering-patterns.md  database-patterns.md  python-backend-patterns.md  scraping-rules.md  streamlit-dashboard-patterns.md  testing-review-patterns.md
specs/: 00-product-vision.md  01-architecture-and-boundaries.md  02-data-model.md  03-ingestion-sources.md  04-normalization.md  05-deduplication-clustering.md  06-ranking-engine.md  07-ai-assisted-processing.md  08-editorial-dashboard.md  09-card-template-renderer.md  10-approval-publication.md  11-audit-observability.md  12-n8n-decoupling.md  13-security-compliance-scraping.md
templates/: ai-batch-prompt-template.md  card-post.html  (+2 more)
(+91 files in other folders)
